// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All service summary for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "service_summary": null,
      },
    },
  },
}
`;

exports[`services data All service summary for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "service_summary": null,
      },
    },
  },
}
`;

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "services": null,
      },
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "services": null,
      },
    },
  },
}
`;

exports[`services data Searching services by name 1`] = `
Array [
  Object {
    "data": Object {
      "en_root": Object {
        "search_by_english_word": Array [
          Object {
            "id": "172",
            "name": "Enquiries for Reporting Entities",
          },
        ],
        "search_by_french_word": Array [],
      },
    },
  },
  Object {
    "data": Object {
      "fr_root": Object {
        "diacritical_free_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
          Object {
            "id": "204",
            "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
          },
        ],
        "diacritical_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
          Object {
            "id": "204",
            "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
          },
        ],
        "multi_word_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
        ],
        "partial_word_search": Array [
          Object {
            "id": "172",
            "name": "Demandes de renseignements d'entités déclarantes",
          },
          Object {
            "id": "204",
            "name": "Entreprises de services monétaires – Recherche d’entités inscrites",
          },
          Object {
            "id": "195",
            "name": "Registre des entreprises de services monétaires (ESM) – Inscription te maintenance",
          },
          Object {
            "id": "978",
            "name": "Demandes de renseignements du public et des médias",
          },
          Object {
            "id": "171",
            "name": "Communications de renseignements financiers",
          },
        ],
      },
    },
  },
]
`;

exports[`services data Single service 1`] = `
Object {
  "data": Object {
    "root": Object {
      "service": null,
    },
  },
}
`;
